Fix Card - Overflow [TWOF-172]

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -145,7 +145,7 @@
     "media footer";
   grid-template-rows: auto auto 1fr auto;
   --#{$prefix}card-media-width: var(--#{$prefix}card-horizontal-media-width);
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto minmax(0, 1fr);
 
   .card-media {
     width: var(--#{$prefix}card-media-width);
